Prevent Installer Page Overflow

--- a/css/admin.css
+++ b/css/admin.css
@@ -4,7 +4,7 @@
 
 .siteorigin-installer-header {
 	background: #f6f6f6;
-	margin: 0 -22px;
+	margin: 0 -20px;
 	padding: 15px 30px 0 30px;
 }
 
@@ -79,7 +79,7 @@
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 	box-sizing: border-box;
 	overflow: hidden;
-	padding: 0 10px 24px 10px;
+	padding: 24px;
 	display: flex;
 }
 
